--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "mongodb": "2.2.33"
+    "mongodb": "2.2.33",
+    "semantic-ui": "~2.2.13"
   }
 }
